# autonomous-mobile-robot

./: .gitignore  .gitmodules  README.md  image_transport_tutorial
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/cmd/: talker.py
beginner_tutorials/launch/: talk_and_listen.launch
beginner_tutorials/scripts/: listener.py
beginner_tutorials/src/: listener.cpp  talker.cpp
detection_pipeline/: CMakeLists.txt  package.xml
detection_pipeline/launch/: detection_pipeline.launch  export_images_from_bag.launch
detection_pipeline/scripts/: darknet_detection_node.py  object_detector.py  object_detector_compressed.py  raspicam_configuration.yaml  tf2_detection_node.py  tf2_test_client.py  tf_detection_node.py  tf_test_client.py
detection_pipeline/scripts/api/: darknet_detection.proto  darknet_detection_pb2.py  darknet_detection_pb2_grpc.py  object_detection.proto  object_detection_pb2.py  object_detection_pb2_grpc.py
detection_pipeline/src/: capture_cam.cpp
image_handler/: CMakeLists.txt  package.xml
image_handler/cmd/: compressed_subscriber.py  image_publisher.py  image_subscriber.py
image_handler/src/: image_publisher.cpp
laser_pipeline/: CMakeLists.txt  README.md  package.xml
laser_pipeline/launch/: laser_pipeline.launch
laser_pipeline/src/: cloud_cluster.cpp  cloud_filter.cpp  laser_converter.cpp
move_turtlebot3/: CMakeLists.txt  package.xml
move_turtlebot3/cmd/: move_robot.py
move_turtlebot3/src/: itl_goal.py
navigation_goals/: CMakeLists.txt  package.xml
navigation_goals/src/: pose_calibration.cpp  send_goal.cpp
pointcloud_handler/: CMakeLists.txt  README.md  package.xml
pointcloud_handler/launch/: pointcloud_handler.launch
pointcloud_handler/src/: cloud_publisher.cpp  euclidean_clustering.cpp  filter_cloud.cpp  laser_to_cloud.cpp  laser_to_pointcloud.cpp  pcl_publisher.cpp  ransac_model.cpp
